Fix spinner off-center

--- a/pillar-web/src/styles/_utils.sass
+++ b/pillar-web/src/styles/_utils.sass
@@ -172,6 +172,13 @@
 	position: relative
 	+spin
 
+.spinner
+	padding-top: 3px
+	padding-left: 3px
+	position: relative
+	left: -3px
+	+spin
+
 @keyframes spin-once
 	from
 		transform: rotate(0deg)
